# create-rust-snake-game

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  TESTING_GUIDE.md
.github/workflows/: ci.yml  release.yml
benches/: snake_performance.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs
