[package]
name = "create-rust-snake-game"
version = "0.0.1"
edition = "2021"

[features]
proptest = ["dep:proptest"]

[dependencies]
ggez = "=0.9.3"
rand = "=0.8.5"
proptest = { version = "1.4.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "snake_performance"
harness = false
